--- a/Day_2/numbers🐸.ipynb
+++ b/Day_2/numbers🐸.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "027dc587",
    "metadata": {},
    "outputs": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "f4a71ff5",
    "metadata": {},
    "outputs": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "0635f629",
    "metadata": {},
    "outputs": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "f63c8425",
    "metadata": {},
    "outputs": [
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "id": "ef57a063",
    "metadata": {},
    "outputs": [
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "db02fc55",
    "metadata": {},
    "outputs": [
@@ -211,8 +211,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "8b777069",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "palindrome\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = 676\n",
+    "num = n\n",
+    "result = 0\n",
+    "while num>0:\n",
+    "    ld = num % 10\n",
+    "    result = (result * 10) + ld\n",
+    "    num = num // 10\n",
+    "\n",
+    "if result == n:\n",
+    "    print(\"palindrome\")\n",
+    "else:\n",
+    "    print(\"not palindrome\")\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a4921270",
    "metadata": {},
    "outputs": [],
    "source": []
